Fix spelling mistake that ruined text layout on small screens

--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -6,7 +6,7 @@
         margin-right: -65px;
     }
 
-    &--gutter-large {
+    &--gutters-large {
         margin-right: -100px;
     }
 
